--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Tocaki
+email: contato@tocaki.net
+description: >
+  Pumpkin spice black, french press bar seasonal id coffee.
+  Whipped carajillo french press doppio at latte extra half
+  and half roast aftertaste grinder aftertaste.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://tocaki.net"
+beta_form: "#"
 
 # Build settings
 markdown: kramdown
+permalink: pretty
