Add social meta tags

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ baseurl: ""
 url: "http://tocaki.net"
 facebook: tocakinet
 instagram: tocakinet
+twitter: tocakinet
 blogurl: ""
 subscriptionurl: ""
 
