Change artist name to title

--- a/_config.yml
+++ b/_config.yml
@@ -58,10 +58,10 @@ prose:
           element: textarea
           label: Sobre
     _artists:
-      - name: name
+      - name: title
         field:
           element: text
-          label: Nome
+          label: title
       - name: image
         field:
           element: select
