--- a/_config.yml
+++ b/_config.yml
@@ -61,6 +61,11 @@ prose:
         field:
           element: text
           label: title
+      - name: description
+        field:
+          element: textarea
+          label: Descrição
+          help: Máximo de 150 caracteres
       - name: image
         field:
           element: select
