--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ subscriptionurl: ""
 # Build settings
 markdown: kramdown
 permalink: pretty
+gems:
+  - jekyll-sitemap
 collections:
   artists:
     output: true
