--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "http://tocaki.net"
 facebook: tocakinet
 instagram: tocakinet
 twitter: tocakinet
-blogurl: ""
+blogurl: "https://tocaki.wordpress.com/"
 subscriptionurl: ""
 
 # Build settings
