--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ facebook: tocakinet
 instagram: tocakinet
 twitter: tocakinet
 blogurl: "https://tocaki.wordpress.com/"
-subscriptionurl: ""
+subscriptionurl: "https://docs.google.com/forms/d/1B8DzIIicg-w2vmNjeWBUmJNuCLXal_Ca3BTTk0UdZ68/viewform?c=0&w=1&edit_requested=true"
 
 # Build settings
 markdown: kramdown
