--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Tocaki
 email: contato@tocaki.net
-description: Descrição
+description: A oportunidade e visibilidade que você artista procura para crescer como profissional.
 baseurl: "/beta"
 url: "http://tocaki.net"
 facebook: tocakinet
