Fix genre multiselect url

--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ prose:
       - name: genre
         field:
           element: multiselect
-          options: 'http://tocaki.net/beta/jsonp/genres.jsonp?callback=genres'
+          options: 'http://tocaki.net/jsonp/genres.jsonp?callback=genres'
           label: Gênero
       - name: portfolio
         field:
